2009-11-22  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/Makefile.vc: Include tk stubs in the tktest link

2009-11-21  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkUtil.c: Remove some anachronistic techniques (pointless
	casts, mixed assignments and tests, etc.)

	* generic/tk3d.c, generic/tkBitmap.c, generic/tkColor.c:
	* generic/tkCursor.c, generic/tkFont.c, generic/tkTextIndex.c:
	[Tcl Bug 2857044]: Corrections following audit of Tcl_ObjType freeing
	practises; the typePtr field is now cleared when an object ceases to
	be of the type.

2009-11-19  Alexandre Ferrieux  <ferrieux@users.sourceforge.net>

	* generic/tkCanvas.c: [Bug 2899685]: Fix the redraw logic of [imove]

2009-11-19  Jan Nijtmans  <nijtmans@users.sf.net>

	* doc/GetHINSTANCE.3:	Fix mentioned header file
	* generic/tkTest.c:	Compile with Stubs
	* generic/tkOldTest.c
	* generic/tkSquare.c
	* win/tcl.m4:		Should have been checked in together with the
				2009-08-09 check in of "win/configure"
	* win/tkWinTest.c:	Don't access tkWinProcs from Tk dll any more
	* unix/tcl.m4:		[Patch 2883533]: tcl.m4 support for Haiku OS
	* unix/configure	(regenerated)
	* unix/Makefile.in:	Fix library order in X11_LIB_SWITCHES

2009-11-19  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkCanvLine.c (LineDeleteCoords): [Bug 2900121]: Get sense of
	test for drawing optimization correct.

2009-11-15  Donal K. Fellows  <dkf@users.sf.net>

	* doc/ttk_treeview.n (detach): Added note that the 'move' operation
	restores detached nodes.

2009-11-12  Joe English  <jenglish@users.sourceforge.net>

	* library/ttk/button.tcl, library/ttk/combobox.tcl,
	* library/ttk/notebook.tcl, library/ttk/treeview.tcl: 
	[update] hygiene.

	+ Where possible, replace [a; update; b] with [a ; after 0 b].
	+ Where not possible, use [update idletasks] instead of full [update].
	+ Use [after 0] in favor of [after idle] for delayed work, to reduce
	likelihood of reentrancy issues in [update idletasks].
